# RACER

./: .gitignore  LICENSE  README.md
racer/: Cargo.toml  README.md
racer/src/: bitboards.rs  board.rs  lib.rs  search.rs
