[package]
description = "A connect-4 library for move generation/validation using the RACER engine."
homepage = "https://github.com/MrPiggyPegasus/RACER"
name = "racer"
version = "1.0.0"
edition = "2021"
license = "MIT"
keywords = ["connect4", "connect-4", "engine", "ai"]
categories = ["algorithms"]
readme = "README.md"

[dependencies]
